--- a/1220Report_Markov.Rmd
+++ b/1220Report_Markov.Rmd
@@ -15,6 +15,8 @@ knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 library(xtable)
 library(darthtools)
+library(ggplot2)
+
 ```
 
 
@@ -55,7 +57,7 @@ cat(c("\\begin{table}[!htb]
 
 \newpage
 # Parameters 
-```{r}
+```{r echo=FALSE}
 HR_l_stg1	<- 0.63
 HR_m_stg1	<- 1.56
 HR_h_stg1	<- 1.6
@@ -76,6 +78,7 @@ HR_wtc_cvd	<-	0.93
 HR_wtc_dth	<-	0.93
 HR_hpt_lip_cvd	<-	0.7
 HR_hpt_lip_cvdth <-	0.82
+
 HR_cvdhistory_cvd <-	1.37
 HR_cvdhistory_cvdth <-	3.12
 
@@ -87,18 +90,23 @@ HR_high_live_cvdth <-	1.17
 ```{r, results='asis', message=FALSE}
 library(readr)
 rate_data <- read_csv("data/ghdx_data.csv")
-xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6))
+# male
+print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
+      caption = "Data from Global Health Data Exchange"),
+      caption.placement="top")
+rate_data <- rate_data[1:7,]
+
 ```
 
 
 ```{r}
 ## General setup
 source("./function/transform_func.R")
-n_t <- 10   # time horizon, number of cycles
+n_t <- 7   # time horizon, number of cycles
 # S1: live; S2: cvd; S3: cvdth; S4: oth_death
 v_names_states <- c("S1", "S2", "S3", "S4")  
 n_states    <- length(v_names_states)   # number of health states 
-v_names_str <- c("Strategy1", "Strategy2", "Strategy3") # store the strategy names
+v_names_str <- c("Strategy0","Strategy1", "Strategy2", "Strategy3") # store the strategy names
 n_str       <- length(v_names_str)      # number of strategies
 # Utilities: for calculation of QALY
 out_cvd_free <-	1   # utility when being S1
@@ -106,11 +114,9 @@ out_cvd <- 0.9   # utility when being S2
 out_dth <-	0   # utility when being S3 and S4 together
 out_trans_to_cvd <-	-0.038   # TODO
 
-
-p_live_oth_death <- rate_to_prob(r=rate_data$rate_death_nonCVD,t = n_t)
-p_live_cvd <- rate_to_prob(r=rate_data$rate_incidence_CVD,t = n_t)
-p_live_cvdth <- rate_to_prob(r=rate_data$rate_death_CVD,t = n_t)
-
+p_live_oth_death <- rate_to_prob(r=rate_data$rate_death_nonCVD,t = 5)
+p_live_cvd <- rate_to_prob(r=rate_data$rate_incidence_CVD,t = 5)
+p_live_cvdth <- rate_to_prob(r=rate_data$rate_death_CVD,t = 5)
 
 # transition probability from S1 to S2
 p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg1)
@@ -121,16 +127,17 @@ p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)
 p_live_cvdth_m <- ProbFactor(p_live_cvdth,1.7)
 p_live_cvdth_h <- ProbFactor(p_live_cvdth,1)
 # transition probability from S2 to S3
-p_ccvd_acvd <- ProbFactor(p_live_cvd,HR_cvdhistory_cvd)
-p_ccvd_cvdth <- ProbFactor(p_live_cvdth,HR_cvdhistory_cvdth)
-
+p_ccvd_acvd <- rate_to_prob(rate_data$rate_incidence_CVD*HR_cvdhistory_cvd,t=5)
+p_ccvd_cvdth <- rate_to_prob(rate_data$rate_death_CVD*HR_cvdhistory_cvdth,t=5)
 ```
 
 
 \begin{center}
-\begin{tabular}{cccc } 
+\begin{table}
+\caption{Incedence rate}
+\begin{tabular}{cccc} 
 \hline
-Item & & CVD incidence & CVD cause-specific mortality  \\
+Item & & CVD incidence(HR) & CVD cause-specific mortality (HR)  \\
 \hline
 \multirow{3}{6em}{Strategy 1}& {Low risk} & `r HR_l_stg1` & 1   \\
 & {Medium risk}& `r HR_m_stg1`  &  1\\
@@ -151,35 +158,87 @@ Item & & CVD incidence & CVD cause-specific mortality  \\
 Medication & Statin and antihypertensive &  &  \\
 \hline
 \end{tabular}
+\end{table}
 \end{center}
 
-## The component of a Markov model: A transition probability matrix, $P_t$
+### Component 1: A transition probability matrix $P_t$
 $$
 P_t=
 \begin{Bmatrix}
-p_{[1,1,t]} & p_{[1,2,t]} & p_{[1,n_s,t]}\\
-p_{[2,1,t]} & p_{[2,2,t]} & p_{[2,n_s,t]}\\
-...\\
-p_{[n_s,1,t]} & p_{[n_s,2,t]} & p_{[n_s,n_s,t]}\\
+p_{[1,1,t]} & p_{[1,2,t]} & p_{[1,3,t]} & p_{[1,4,t]} \\
+p_{[2,1,t]} & p_{[2,2,t]} & p_{[2,3,t]} & p_{[2,4,t]} \\
+p_{[3,1,t]} & p_{[3,2,t]} & p_{[3,3,t]} & p_{[3,4,t]} \\
+p_{[4,1,t]} & p_{[4,2,t]} & p_{[4,3,t]} & p_{[4,4,t]}\\
 \end{Bmatrix}
 $$
+
+For example, for the cycle $n_t=1$, the transition matrix for the cohort is:
+
+
+$$
+P_1=
+\begin{Bmatrix}
+P4 & P1 &  P2 & P3 \\
+0 & P6 & P5 & P3 \\
+0 & 0 & 0 & 0  \\
+0 & 0 & 0 & 0 \\
+\end{Bmatrix}
+$$
+
 
 ```{r}
 ###################### Construct state-transition models for Strategy1 #####################
 #### Create transition arrays ####
 a_P <- array(0, dim      = c(n_states, n_states, n_t),
                 dimnames = list(v_names_states, v_names_states, 0:(n_t - 1)))
+# TODO: assume 
+p1 = p2 = p3 = p4 = p5 = p6 = 0.5
 ### Fill in array
 ## From S1
-# a_P["S1", "S1", ]   <- 0
-a_P["S1", "S2", ]  <- p_live_cvd_l[1:10]
-a_P["S1", "S3", ]   <- p_live_cvdth_l[1:10]
-# a_P["S1", "S4", ]   <- 0
+a_P["S1", "S1", ]   <- (1-(p_live_cvd+p_live_cvdth+p_live_oth_death))*p4
+a_P["S1", "S2", ]  <- p_live_cvd*p1
+a_P["S1", "S3", ]   <- p_live_cvdth*p2
+a_P["S1", "S4", ]   <- p_live_oth_death*p3
 
 ## From S2
-a_P["S2", "S2", ] <- p_ccvd_acvd[1:10]
-a_P["S2", "S3", ] <- p_ccvd_cvdth[1:10]
-# a_P["S2", "S4", ]  <- p_ccvd_cvdth[1:10]
+a_P["S2", "S1", ] <- 0
+a_P["S2", "S2", ] <- p_ccvd_acvd*p4
+a_P["S2", "S3", ] <- p_ccvd_cvdth*p5
+a_P["S2", "S4", ] <- p_live_oth_death*p3
+  # 1 - (p_ccvd_acvd + p_ccvd_cvdth)
+
+## From S3
+a_P["S3", "S1", ] <- 0
+a_P["S3", "S2", ] <- 0
+a_P["S3", "S3", ] <- 1
+a_P["S3", "S4", ] <- 0
+
+## From S4
+a_P["S4", "S1", ] <- 0
+a_P["S4", "S2", ] <- 0
+a_P["S4", "S3", ] <- 0
+a_P["S4", "S4", ] <- 1
+
 ```
 
+### Component 2: A  cohort trace matrix $M$
+```{r}
+#### Run Markov model ####
+## Initial state vector
+# All starting healthy
+v_s_init <- c(strategy0 = 1, strategy1 = 0, strategy2 = 0, strategy3 = 0) # initial state vector
+v_s_init
+
+## Initialize cohort trace for cSTM 
+m_M <- matrix(0,nrow     = (n_t + 1), ncol = n_states, 
+              dimnames = list(0:n_t, v_names_states))
+# Store the initial state vector in the first row of the cohort trace
+m_M[1, ] <- v_s_init
+
+## Iterative solution of cSTM
+for(t in 1:n_t){
+  m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
+}
+plot_trace(m_M)
+```
 
