--- a/1220Report_Markov.Rmd
+++ b/1220Report_Markov.Rmd
@@ -16,7 +16,6 @@ library(knitr)
 library(xtable)
 library(darthtools)
 library(ggplot2)
-
 ```
 
 
@@ -56,8 +55,135 @@ cat(c("\\begin{table}[!htb]
 ```
 
 \newpage
-# Parameters 
+# Part I. General population (without CVD)
 ```{r echo=FALSE}
+HR_cvdhistory_cvd <-	1.37
+HR_cvdhistory_cvdth <- 3.12
+HR_high_live_cvdth <-	1.17
+```
+
+## Markov model
+```{r, results='asis', message=FALSE}
+library(readr)
+rate_data <- read_csv("data/ghdx_data.csv")
+# male
+print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
+      caption = "Data from Global Health Data Exchange"),
+      caption.placement="top")
+```
+
+```{r}
+## General setup
+source("./function/transform_func.R")
+rate_data <- rate_data[1:7,]
+n_t <- 10   # time horizon, number of cycles
+# S1: live; S2: cvd; S3: cvdth; S4: oth_death
+v_names_states <- c("S1", "S2", "S3", "S4")  
+n_states    <- length(v_names_states)   # number of health states 
+v_names_str <- c("Strategy0","Strategy1", "Strategy2", "Strategy3") # store the strategy names
+n_str       <- length(v_names_str)      # number of strategies
+# Utilities: for calculation of QALY
+out_cvd_free <-	1   # utility when being S1
+out_cvd <- 0.9   # utility when being S2
+out_dth <-	0   # utility when being S3 and S4 together
+out_trans_to_cvd <-	-0.038   # TODO
+
+p_live_oth_death <- rate_to_prob(r=rate_data$rate_death_nonCVD,t = 1)
+p_live_cvd <- rate_to_prob(r=rate_data$rate_incidence_CVD,t = 1)
+p_live_cvdth <- rate_to_prob(r=rate_data$rate_death_CVD,t = 1)
+# transition probability from S2 to S3
+p_ccvd_acvd <- rate_to_prob(rate_data$rate_incidence_CVD*HR_cvdhistory_cvd,t=5)
+p_ccvd_cvdth <- rate_to_prob(rate_data$rate_death_CVD*HR_cvdhistory_cvdth,t=5)
+```
+
+### Component 1: A transition probability matrix $P_t$
+$$
+P_t=
+\begin{Bmatrix}
+p_{[1,1,t]} & p_{[1,2,t]} & p_{[1,3,t]} & p_{[1,4,t]} \\
+p_{[2,1,t]} & p_{[2,2,t]} & p_{[2,3,t]} & p_{[2,4,t]} \\
+p_{[3,1,t]} & p_{[3,2,t]} & p_{[3,3,t]} & p_{[3,4,t]} \\
+p_{[4,1,t]} & p_{[4,2,t]} & p_{[4,3,t]} & p_{[4,4,t]}\\
+\end{Bmatrix}
+$$
+
+For example, the transition matrix for the cohort is:
+$$
+P_1=
+\begin{Bmatrix}
+p_{[1,1,t]} & p\_live\_cvd & p\_live\_cvdth & p\_live\_oth\_death \\
+0 & p\_ccvd\_acvd & p\_ccvd\_cvdth & p\_live\_oth\_death \\
+0 & 0 & 0 & 0  \\
+0 & 0 & 0 & 0 \\
+\end{Bmatrix}
+$$
+
+
+```{r}
+###################### Construct state-transition models for Strategy1 #####################
+#### Create transition arrays ####
+a_P <- array(0, dim      = c(n_states, n_states, n_t),
+                dimnames = list(v_names_states, v_names_states, 0:(n_t - 1)))
+## From S1
+a_P["S1", "S1", 0:6]   <- (1-(p_live_cvd[1] +
+                             p_live_cvdth[1] +
+                             p_live_oth_death[1]))
+a_P["S1", "S2", 0:6]  <- p_live_cvd[1]
+a_P["S1", "S3", 0:6]   <- p_live_cvdth[1]
+a_P["S1", "S4", 0:6]   <- p_live_oth_death[1]
+## From S2
+a_P["S2", "S1", 0:6] <- 0
+a_P["S2", "S2", 0:6] <- p_ccvd_acvd[1]
+a_P["S2", "S3", 0:6] <- p_ccvd_cvdth[1]
+# TODO: cvd people to death of other reasons (P3)
+a_P["S2", "S4", 0:6] <- 1 - (p_ccvd_acvd[1] + p_ccvd_cvdth[1])
+## From S3
+a_P["S3", "S3", 0:6] <- 1
+## From S4
+a_P["S4", "S4", 0:6] <- 1
+
+# From S1
+a_P["S1", "S1", 6:10] <- (1-(p_live_cvd[1+1] +
+                             p_live_cvdth[1+1] +
+                             p_live_oth_death[1+1]))
+a_P["S1", "S2", 6:10]  <- p_live_cvd[1+1]
+a_P["S1", "S3", 6:10]  <- p_live_cvdth[1+1]
+a_P["S1", "S4", 6:10]  <- p_live_oth_death[1+1]
+## From S2
+a_P["S2", "S1", 6:10] <- 0
+a_P["S2", "S2", 6:10] <- p_ccvd_acvd[1+1]
+a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]
+# TODO: cvd people to death of other reasons
+# p_live_oth_death != p_cvd _oth_death (P3)
+a_P["S2", "S4", 6:10] <- 1 - (p_ccvd_acvd[1+1] + p_ccvd_cvdth[1+1])
+## From S3
+a_P["S3", "S3", 6:10] <- 1
+## From S4
+a_P["S4", "S4", 6:10] <- 1
+```
+
+### Component 2: A  cohort trace matrix $M$
+```{r fig.cap="For the group male aging from 40-50",fig.height=3.5}
+#### Run Markov model ####
+## Initial state vector
+# All starting healthy
+v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
+
+## Initialize cohort trace for cSTM 
+m_M <- matrix(0,nrow     = (n_t + 1), ncol = n_states, 
+              dimnames = list(0:n_t, v_names_states))
+m_M[1, ] <- v_s_init
+
+## Iterative solution of cSTM
+for(t in 1:n_t){
+  ## Fill in cohort trace
+  m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]
+}
+plot_trace(m_M)
+```
+
+\newpage
+```{r}
 HR_l_stg1	<- 0.63
 HR_m_stg1	<- 1.56
 HR_h_stg1	<- 1.6
@@ -78,46 +204,6 @@ HR_wtc_cvd	<-	0.93
 HR_wtc_dth	<-	0.93
 HR_hpt_lip_cvd	<-	0.7
 HR_hpt_lip_cvdth <-	0.82
-
-HR_cvdhistory_cvd <-	1.37
-HR_cvdhistory_cvdth <-	3.12
-
-HR_high_live_cvdth <-	1.17
-```
-
-# Markov model
-## Model input 
-```{r, results='asis', message=FALSE}
-library(readr)
-rate_data <- read_csv("data/ghdx_data.csv")
-# male
-print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
-      caption = "Data from Global Health Data Exchange"),
-      caption.placement="top")
-rate_data <- rate_data[1:7,]
-
-```
-
-
-```{r}
-## General setup
-source("./function/transform_func.R")
-n_t <- 7   # time horizon, number of cycles
-# S1: live; S2: cvd; S3: cvdth; S4: oth_death
-v_names_states <- c("S1", "S2", "S3", "S4")  
-n_states    <- length(v_names_states)   # number of health states 
-v_names_str <- c("Strategy0","Strategy1", "Strategy2", "Strategy3") # store the strategy names
-n_str       <- length(v_names_str)      # number of strategies
-# Utilities: for calculation of QALY
-out_cvd_free <-	1   # utility when being S1
-out_cvd <- 0.9   # utility when being S2
-out_dth <-	0   # utility when being S3 and S4 together
-out_trans_to_cvd <-	-0.038   # TODO
-
-p_live_oth_death <- rate_to_prob(r=rate_data$rate_death_nonCVD,t = 1)
-p_live_cvd <- rate_to_prob(r=rate_data$rate_incidence_CVD,t = 1)
-p_live_cvdth <- rate_to_prob(r=rate_data$rate_death_CVD,t = 1)
-
 # transition probability from S1 to S2
 p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg1)
 p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg1)
@@ -126,9 +212,6 @@ p_live_cvd_h <- ProbFactor(p_live_cvd,HR_h_stg1)
 p_live_cvdth_l <- ProbFactor(p_live_cvdth,1)    # equal
 # p_live_cvdth_m <- ProbFactor(p_live_cvdth,1.7) # intervention etc.
 # p_live_cvdth_h <- ProbFactor(p_live_cvdth,1) # intervention etc.
-# transition probability from S2 to S3
-p_ccvd_acvd <- rate_to_prob(rate_data$rate_incidence_CVD*HR_cvdhistory_cvd,t=5)
-p_ccvd_cvdth <- rate_to_prob(rate_data$rate_death_CVD*HR_cvdhistory_cvdth,t=5)
 ```
 
 
@@ -160,74 +243,4 @@ Medication & Statin and antihypertensive &  &  \\
 \end{tabular}
 \end{table}
 \end{center}
-
-### Component 1: A transition probability matrix $P_t$
-$$
-P_t=
-\begin{Bmatrix}
-p_{[1,1,t]} & p_{[1,2,t]} & p_{[1,3,t]} & p_{[1,4,t]} \\
-p_{[2,1,t]} & p_{[2,2,t]} & p_{[2,3,t]} & p_{[2,4,t]} \\
-p_{[3,1,t]} & p_{[3,2,t]} & p_{[3,3,t]} & p_{[3,4,t]} \\
-p_{[4,1,t]} & p_{[4,2,t]} & p_{[4,3,t]} & p_{[4,4,t]}\\
-\end{Bmatrix}
-$$
-
-For example, for the cycle $n_t=1$, the transition matrix for the cohort is:
-
-
-$$
-P_1=
-\begin{Bmatrix}
-p_{[1,1,t]} & p\_live\_cvd & p\_live\_cvdth & p\_live\_oth\_death \\
-0 & p\_ccvd\_acvd & p\_ccvd\_cvdth & p\_live\_oth\_death \\
-0 & 0 & 0 & 0  \\
-0 & 0 & 0 & 0 \\
-\end{Bmatrix}
-$$
-
-
-```{r}
-###################### Construct state-transition models for Strategy1 #####################
-#### Create transition arrays ####
-a_P <- array(0, dim      = c(n_states, n_states, n_t),
-                dimnames = list(v_names_states, v_names_states, 0:(n_t - 1)))
-### Fill in array
-## From S1
-a_P["S1", "S1", ]   <- (1-(p_live_cvd+p_live_cvdth+p_live_oth_death))
-a_P["S1", "S2", ]  <- p_live_cvd
-a_P["S1", "S3", ]   <- p_live_cvdth
-a_P["S1", "S4", ]   <- p_live_oth_death
-## From S2
-a_P["S2", "S1", ] <- 0
-a_P["S2", "S2", ] <- p_ccvd_acvd
-a_P["S2", "S3", ] <- p_ccvd_cvdth
-a_P["S2", "S4", ] <- p_live_oth_death
-  # 1 - (p_ccvd_acvd + p_ccvd_cvdth)
-## From S3
-a_P["S3", "S3", ] <- 1
-## From S4
-a_P["S4", "S4", ] <- 1
-
-```
-
-### Component 2: A  cohort trace matrix $M$
-```{r}
-#### Run Markov model ####
-## Initial state vector
-# All starting healthy
-v_s_init <- c(strategy0 = 1, strategy1 = 0, strategy2 = 0, strategy3 = 0) # initial state vector
-v_s_init
-
-## Initialize cohort trace for cSTM 
-m_M <- matrix(0,nrow     = (n_t + 1), ncol = n_states, 
-              dimnames = list(0:n_t, v_names_states))
-# Store the initial state vector in the first row of the cohort trace
-m_M[1, ] <- v_s_init
-
-## Iterative solution of cSTM
-for(t in 1:n_t){
-  m_M[t + 1, ] <- m_M[t, ] %*% a_P[, , t]
-}
-plot_trace(m_M)
-```
 
