--- a/Report_CVD.Rmd
+++ b/Report_CVD.Rmd
@@ -57,9 +57,7 @@ cat(c("\\begin{table}[!htb]
 ```
 
 \newpage
-# Part I. General population (without CVD)
-
-## Markov model
+# Data and parameters
 ```{r, results='asis', message=FALSE}
 library(readr)
 rate_data <- read_csv("data/ghdx_data.csv")
@@ -68,10 +66,25 @@ print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
       caption.placement="top")
 ```
 
+```{r, results='asis', message=FALSE}
+library(readr)
+noStrategy_data <- read_csv("data/Normal_data.csv")
+print(xtable(data.frame(noStrategy_data),digits=c(0,0,0,0),
+      caption = "Distribution of the population"),
+      caption.placement="top")
+```
+
+```{r, results='asis', message=FALSE}
+population_data <- readr::read_csv("data/Normal3Stra_data.csv")
+population_data <- data.frame(population_data)
+print(xtable(data.frame(population_data),digits=c(0,0,0,0,0,0,0),
+      caption = "Distribution of the population under different strategies"),caption.placement="top")
+```
+
+\clearpage
 ```{r}
 ## General setup
 source("./function/transform_func.R")
-# rate_data <- rate_data[1:7,]
 n_t <- 10   # time horizon, number of cycles
 # S1: live; S2: cvd; S3: cvdth; S4: oth_death
 v_names_states <- c("S1", "S2", "S3", "S4")  
@@ -99,14 +112,22 @@ p_ccvd_acvd <- rate_to_prob(rate_data$incidence*HR_cvdhistory_cvd, t=1)
 p_ccvd_cvdth <- rate_to_prob(rate_data$death_CVD*HR_cvdhistory_cvdth,t=1)
 set.seed(100)
 p_acvd_cvdth <- rep(runif(1,min=0.02,max=0.1),length=length(p_live_cvd))
+
+# half-cycle correction
+# corr_matrix <- matrix(1,nrow = 11,ncol = 4)
+# corr_matrix[1,] <- rep(0.5,4)
+# corr_matrix[11,] <- rep(0.5,4)
+# corr_matrix
 ```
 
 ### Component 1: A transition probability matrix $P_t$
+\begin{center}
+\includegraphics[width=8in]{TreeAge.jpg}
+\end{center}
 
 \begin{center}
 \includegraphics[width=6in]{Mat.png}
 \end{center}
-
 $$
 P_t=
 \begin{Bmatrix}
@@ -116,10 +137,6 @@ p_{[3,1,t]} & p_{[3,2,t]} & p_{[3,3,t]} & p_{[3,4,t]} \\
 p_{[4,1,t]} & p_{[4,2,t]} & p_{[4,3,t]} & p_{[4,4,t]}\\
 \end{Bmatrix}
 $$
-\begin{center}
-\includegraphics[width=8in]{TreeAge.jpg}
-\end{center}
-
 Thus, 
 
 $P4 = 1-P1-P2-P3$
@@ -134,8 +151,9 @@ $P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
 
 $P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
-In what follows, an example for the groups of male patients, aging from 40 to 45 is illustrated.
+# Strategy 0 (a male 40-45)
 
+In what follows, an example for the groups of male patients, aging from 40 to 45 is illustrated.
 ```{r}
 ###################### Construct state-transition models for Strategy1 #####################
 #### Create transition arrays ####
@@ -171,7 +189,9 @@ a_P["S2", "S3", 6:10] <- p_ccvd_cvdth[1+1]+p_ccvd_acvd[1+1]*p_acvd_cvdth[1+1]
 a_P["S2", "S4", 6:10] <-  p_live_oth_death[1+1]
 a_P["S3", "S3", 6:10] <- 1
 a_P["S4", "S4", 6:10] <- 1
-a_P
+# is the constructed transition matrix in 10 cycles
+# depends on the specific population (age and gender)
+a_P  
 ```
 
 ### Component 2: The  cohort trace matrix $M$
@@ -179,17 +199,46 @@ a_P
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
 m_M
 ```
+\textcolor{red}{This matrix is the trace matrix of the specific population (male, 40-45) during these 10 cycles. The whole cohort starts in $S1$ state and transitions to the rest of the states over time.}
+
+```{r}
+
+CVD_per_person <- sum(m_M[,1]* p_live_cvd[1])
+CVD_per_person
+
+# calculation of the per CVD prevented events
+CVD_prevented <- matrix(NA,nrow=14,ncol=1)
+
+for(i in 1:14){
+  CVD_prevented[i] <- sum(m_M[,1]*p_live_cvd[i])
+}
+CVD_prevented
+strategy3_noscren_CVD <- matrix(CVD_prevented[c(1,2,8,9)],ncol=2,nrow=2)
+colnames(strategy3_noscren_CVD) <- c("male","female")
+rownames(strategy3_noscren_CVD) <- c("40","45")
+```
+
+```{r}
+result_strategy0 <- matrix(NA,nrow=1,ncol=1)
+colnames(result_strategy0) <- c("strategy0")
+
+result_strategy0 <- sum(noStrategy_data$num * as.numeric(CVD_prevented))
+result_strategy0
+```
+
+\textcolor{red}{This is the CVD events for the general population.}
+
 
 \newpage
-```{r}
+```{r echo=FALSE}
 HR_l_stg1	<- 0.63
 HR_m_stg1	<- 1.56
 HR_h_stg1	<- 1.6
@@ -242,9 +291,8 @@ Medication & Statin and antihypertensive & `r HR_hpt_lip_cvd` &  `r HR_hpt_lip_c
 \end{table}
 \end{center}
 
-## Calculation of the QALY under the Strategy 1 
+# Strategy 1 (a male 40-45)
 
-### An example for a male patient aged 40-45 years old under low level after screening 
 ```{r}
 p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg1)
 p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg1*
@@ -270,6 +318,7 @@ p_ccvd_cvdth <- ProbFactor(p_live_cvdth,HR_cvdhistory_cvdth)
 \end{center}
 
 
+
 Thus, we take the example of individuals in the low level
 
 $\underline{P4} = 1-P1-P2-P3$
@@ -285,7 +334,6 @@ $P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
 $P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
 \textcolor{red}{We say that the screening strategy will have an influence on the first line of the transition matrix.}
-
 
 ```{r}
 ###################### Construct state-transition models for Strategy1 #####################
@@ -327,26 +375,21 @@ a_P
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
 m_M
 ```
 
+\textcolor{red}{This matrix is the trace matrix of the specific population (male, 40-45) during these 10 cycles under Strategy1. The whole cohort starts in $S1$ state and transitions to the rest of the states over time.}
+
 ```{r}
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_l <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under low level
-print(m_M*mat)
-
+CVD_prevented_l <- sum(m_M[,1]*p_live_cvd_l[1])
+CVD_prevented_l
 ```
-
 
 ```{r echo=FALSE}
 ###################### Construct state-transition models for Strategy1 #####################
@@ -387,23 +430,20 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
+m_M
+
 ```
 
-```{r echo=FALSE}
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_m <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under medium level
+```{r}
+CVD_prevented_m <- sum(m_M[,1]*p_live_cvd_m[1])
+CVD_prevented_m
 ```
-
 
 ```{r echo=FALSE}
 ###################### Construct state-transition models for Strategy1 #####################
@@ -444,45 +484,43 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
+m_M
 ```
 
-```{r echo=FALSE}
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_h <- sum(m_M*mat)  # is the calculated QALY for the assumed patient under high level
+```{r}
+CVD_prevented_h <- sum(m_M[,1]*p_live_cvd_h[1])
+CVD_prevented_h
 ```
 
+\textcolor{red}{We perform the same procedure for all risk levels: low, medium and high, and then obtain the following tables for the health benefit results.}
 
 \begin{table}[htbp]
 \centering
- \caption{QALY for the calculation of utility values (a male patient aged 40-45)}
+ \caption{prevented CVD (a male patient aged 40-45)}
 \begin{tabular}{ cc } 
 \hline
-Stratification & QALY \\
+Stratification & CVD events \\
 \hline
-Low risk & `r QALY_l`\\
-Medium risk & `r QALY_m`\\
-High risk & `r QALY_h`\\
+Low risk & `r CVD_prevented_l`\\
+Medium risk & `r CVD_prevented_m`\\
+High risk & `r CVD_prevented_h`\\
 \hline
 \end{tabular}
 \end{table}
 
+\textcolor{red}{When compared what we calculated before, the number of CVD events udner Strategy 0 is `r CVD_prevented`, we may conclude that screening could help to prevent the CVD events under all three risk groups in the specific age and gender group.}
+
 \newpage
 
-# Health utilities of Strategy1 
-
-To calculate the require QALY for both male and female patients under different ages, construct a vactor to and run a loop save the calculated result 
+# Health benefits of Strategy1 
 ```{r}
-QALY_h <- matrix(NA,nrow=14,ncol=1)
+CVD_prevented_h <- matrix(NA,nrow=14,ncol=1)
 # i specify the group of male patients (age)
 for(i in 1:6){
   a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -521,18 +559,14 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_h[i] <- sum(m_M*mat)
+m_M
+CVD_prevented_h[i] <- sum(m_M[,1]*p_live_cvd_h[i])
 }
 
 # the group of the male patients aged 70-75
@@ -558,18 +592,14 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_h[7] <- sum(m_M*mat)
+
+CVD_prevented_h[7] <- sum(m_M[,1]*p_live_cvd_h[7])
 #-----------------------------------------------------------------------------------
 # i specify the group of female patients (age)
 for(i in 8:13){  
@@ -609,18 +639,13 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_h[i] <- sum(m_M*mat)
+CVD_prevented_h[i] <- sum(m_M[,1]*p_live_cvd_h[i])
 }
 
 a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -644,22 +669,17 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_h[14] <- sum(m_M*mat)
+CVD_prevented_h[14] <- sum(m_M[,1]*p_live_cvd_h[14])
 ```
 
 ```{r}
-QALY_m <- matrix(NA,nrow=14,ncol=1)
+CVD_prevented_m <- matrix(NA,nrow=14,ncol=1)
 # i specify the group of male patients (age)
 for(i in 1:6){
   a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -698,18 +718,13 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_m[i] <- sum(m_M*mat)
+CVD_prevented_m[i] <- sum(m_M[,1]*p_live_cvd_m[i])
 }
 
 # the group of the male patients aged 70-75
@@ -735,18 +750,14 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_m[7] <- sum(m_M*mat)
+CVD_prevented_m[7] <- sum(m_M[,1]*p_live_cvd_m[7])
+
 #-----------------------------------------------------------------------------------
 # i specify the group of female patients (age)
 for(i in 8:13){  
@@ -786,18 +797,13 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_m[i] <- sum(m_M*mat)
+CVD_prevented_m[i] <- sum(m_M[,1]*p_live_cvd_m[i])
 }
 
 a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -821,22 +827,18 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_m[14] <- sum(m_M*mat)
+CVD_prevented_m[14] <- sum(m_M[,1]*p_live_cvd_m[14])
 ```
 
 ```{r}
-QALY_l <- matrix(NA,nrow=14,ncol=1)
+CVD_prevented_l <- matrix(NA,nrow=14,ncol=1)
+
 # i specify the group of male patients (age)
 for(i in 1:6){
   a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -875,18 +877,14 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_l[i] <- sum(m_M*mat)
+CVD_prevented_l[i] <- sum(m_M[,1]*p_live_cvd_l[i])
+
 }
 
 # the group of the male patients aged 70-75
@@ -912,18 +910,14 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_l[7] <- sum(m_M*mat)
+CVD_prevented_l[7] <- sum(m_M[,1]*p_live_cvd_l[7])
+
 #-----------------------------------------------------------------------------------
 # i specify the group of female patients (age)
 for(i in 8:13){  
@@ -963,18 +957,14 @@ a_P["S4", "S4", 6:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_l[i] <- sum(m_M*mat)
+CVD_prevented_l[i] <- sum(m_M[,1]*p_live_cvd_l[i])
+
 }
 
 a_P <- array(0, dim      = c(n_states, n_states, 10),
@@ -998,24 +988,61 @@ a_P["S4", "S4", 1:10] <- 1
 ## Initial state vector: All starting healthy
 v_s_init <- c(state0 = 1, state1 = 0, state2 = 0, state3 = 0) 
 ## Initialize cohort trace for Markov model 
-m_M <- matrix(0,nrow     = (n_t), ncol = n_states, 
-              dimnames = list(0:(n_t-1), v_names_states))
+m_M <- matrix(0,nrow     = (n_t+1), ncol = n_states, 
+              dimnames = list(0:(n_t), v_names_states))
 m_M[1, ] <- v_s_init
-for(t in 1:9){
+for(t in 1:10){
   m_M[t + 1, ]      <- m_M[t, ]      %*% a_P[, , t]   
 }
-# calculation of the QALY
-mat <- matrix(NA, nrow=nrow(m_M),ncol = 4)
-for (j in 1:nrow(m_M)){
-  mat[j,] <- uti_values
-}
-QALY_l[14] <- sum(m_M*mat)
+CVD_prevented_l[14] <- sum(m_M[,1]*p_live_cvd_l[14])
 ```
 
 
 ```{r results='asis', message=FALSE}
-print(xtable(data.frame(cbind(rate_data,QALY_h,QALY_m,QALY_l)),digits=c(0,0,0,6,6,6,4,4,4),
-      caption = "QALY under the screening of Strategy 1"),
+CVD_prevented_l <- as.numeric(CVD_prevented_l)
+CVD_prevented_m <- as.numeric(CVD_prevented_m)
+CVD_prevented_h <- as.numeric(CVD_prevented_h)
+
+res <- data.frame(cbind("index"=rate_data$index,
+                        "sex"=rate_data$sex,
+                        "low"=CVD_prevented_l,
+                        "medium"=CVD_prevented_m,
+                        "high"=CVD_prevented_h
+                        ))
+print(xtable(res,digits=c(0,0,0,3,3,3),
+      caption = "prevented CVD events under the screening of Strategy 1"),
       caption.placement="top")
 ```
+
+
+```{r}
+# loop for 3 strategies
+pop_dat <- data.frame(cbind(population_data$low,
+                            population_data$medium,
+                            population_data$high))
+cvd_dat <- data.frame(cbind(as.numeric(res$low),
+                            as.numeric(res$medium),
+                            as.numeric(res$high)))
+result <- matrix(NA,nrow=1,ncol=3)
+colnames(result) <- c("strategy1","strategy2","strategy3")
+
+for(i in 1:3){ # strategy: strategy1 strategy2 strategy3
+  for (x in 1:14){ # gender and age
+  for (y in 1:3) {   # risk: low medium high
+    perstr <- sum(pop_dat[x*i,y] * cvd_dat[x,y])
+  }
+  }
+  result[i] <- perstr
+}
+# for strategy3, there is no screening for patients aged from 40-50
+strategy3_noscreen <- cbind(c(229,444),c(498,856))
+colnames(strategy3_noscreen) <- c("male","female")
+rownames(strategy3_noscreen) <- c("40","45")
+strategy3_noscreen
+strategy3_noscren_CVD
+result[3] <- result[3] + sum(strategy3_noscreen*strategy3_noscren_CVD)
+result
+```
+
+\textcolor{red}{This is the result for the CVD events under 3 different strategies}
 
