--- a/Report_all.Rmd
+++ b/Report_all.Rmd
@@ -19,28 +19,20 @@ library(xtable)
 library(darthtools)
 library(ggplot2)
 library(readr)
-source("../function/transform_func.R")
+source("function/transform_func.R")
 ```
 # Data and parameters
 ```{r, results='asis', message=FALSE}
-rate_data <- read_csv("../data/ghdx_data.csv")
-print(xtable(data.frame(rate_data),digits=c(0,0,0,6,6,6),
-      caption = "Data from Global Health Data Exchange"),
-      caption.placement="top",comment=FALSE)
+rate_data <- read_csv("data/ghdx_data.csv")
 ```
 
 ```{r, results='asis', message=FALSE}
-noStrategy_data <- read_csv("../data/Normal_data.csv")
-print(xtable(data.frame(noStrategy_data),digits=c(0,0,0,0),
-      caption = "Distribution of the population"),
-      caption.placement="top",comment=FALSE)
+noStrategy_data <- read_csv("data/Normal_data.csv")
 ```
 
 ```{r, results='asis', message=FALSE}
-population_data <- read_csv("../data/Normal3Stra_data.csv")
+population_data <- read_csv("data/Normal3Stra_data.csv")
 population_data <- data.frame(population_data)
-print(xtable(data.frame(population_data),digits=c(0,0,0,0,0,0,0),
-      caption = "Distribution of the population under different strategies"),caption.placement="top",comment=FALSE)
 ```
 
 \clearpage
@@ -58,6 +50,7 @@ out_dth <-	0   # utility when being S3 and S4 together
 out_trans_to_cvd <-	-0.038    # TODO
 
 uti_values <- c(out_cvd_free, out_cvd, out_dth, out_dth)
+year <- c(1,1,0,0)
 
 HR_cvdhistory_cvd <-	1.37
 HR_cvdhistory_cvdth <- 3.12
@@ -69,51 +62,24 @@ p_live_cvdth <- rate_to_prob(r=rate_data$death_CVD, t=1)
 # transition probability from S2 to S3
 p_ccvd_acvd <- rate_to_prob(rate_data$incidence*HR_cvdhistory_cvd, t=1)
 p_ccvd_cvdth <- rate_to_prob(rate_data$death_CVD*HR_cvdhistory_cvdth,t=1)
-set.seed(100)
-p_acvd_cvdth <- rep(runif(1,min=0.02,max=0.1),length=length(p_live_cvd))
+
+set.seed(1)
+p_acvd_cvdth <- matrix(NA)
+for(i in 1:length(p_live_cvd)){
+  p_acvd_cvdth[i] <- runif(1,min=0.02,max=0.1)
+}
 
 # half-cycle correction could be added
 ```
-
-# A transition probability matrix $P_t$
-\begin{center}
-\includegraphics[width=8in]{TreeAge.jpg}
-\end{center}
-
-\begin{center}
-\includegraphics[width=6in]{Mat.png}
-\end{center}
-$$
-P_t=
-\begin{Bmatrix}
-p_{[1,1,t]} & p_{[1,2,t]} & p_{[1,3,t]} & p_{[1,4,t]} \\
-p_{[2,1,t]} & p_{[2,2,t]} & p_{[2,3,t]} & p_{[2,4,t]} \\
-p_{[3,1,t]} & p_{[3,2,t]} & p_{[3,3,t]} & p_{[3,4,t]} \\
-p_{[4,1,t]} & p_{[4,2,t]} & p_{[4,3,t]} & p_{[4,4,t]}\\
-\end{Bmatrix}
-$$
-Thus, 
-
-$P4 = 1-P1-P2-P3$
-
-$P1 = p\_live\_cvd*(1-p\_acvd\_cvdth)$
-
-$P2 = p\_live\_cvdth + p\_live\_cvd*p\_acvd\_cvdth$ 
-
-$P3 = p\_live\_oth\_death$
-
-$P6= 1-(p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth)-p\_live\_oth\_death$
-
-$P5= p\_ccvd\_cvdth+p\_ccvd\_acvd*p\_acvd\_cvdth$
 
 # Strategy 0
 
 ```{r}
 ###################### Construct state-transition models for Strategy1 #####################
-patient_group_name <- c("m40","m45","m50","m55","m60","m65","m70",
+names_population <- c("m40","m45","m50","m55","m60","m65","m70",
                         "f40","f45","f50","f55","f60","f65","f70")
 result_m_M <- array(0, dim = c(10, 4, 14),
-               dimnames = list(paste0("t",0:9), v_names_states, patient_group_name))
+               dimnames = list(paste0("t",0:9), v_names_states, names_population))
 
 for(i in 1:14){
   if(i != 7 && i != 14){
@@ -188,22 +154,94 @@ for(i in 1:14){
 result_m_M[ , ,1] # an example for the patient group 40-45, male
 ```
 
+```{r results='asis'}
+# p_acvd_cvdth
+p8 <-array(runif(140,min=0.02,max=0.1),dim=c(10,14),dimnames=list(1:10,names_population))
+p9 <- array(NA,dim=c(10,14),dimnames=list(1:10,names_population))
+for (i in 1:14){
+  if (i==7 | i==14){
+    for (j in 1:10)
+      p9[j,i]<-p_ccvd_acvd[i]*(1-p8[j,i])
+  }
+  else {
+    for (j in 1:5){
+      p9[j,i]<-p_ccvd_acvd[i]*(1-p8[j,i])
+    }
+    for (j in 6:10){
+      p9[j,i]<-p_ccvd_acvd[i+1]*p8[j,i]
+    }
+  }
+}
+# print(xtable(data.frame(p9[,1:7]),digits=c(0,6,6,6,6,6,6,6),
+#       caption = "Probability of CVD with CVD history (male)"),
+#       caption.placement="top",comment=FALSE)
+# print(xtable(data.frame(p9[,8:14]),digits=c(0,6,6,6,6,6,6,6),
+#       caption = "Probability of CVD with CVD history (female)"),
+#       caption.placement="top",comment=FALSE)
+```
+
+
+```{r results='asis'}
+p10 <- array(NA,
+             dim=c(10,14),
+             dimnames=list(1:10,names_population))
+for (i in 1:14){
+  if (i==7 | i==14){
+    for (j in 1:10)
+      p10[j,i]<-p_live_cvd[i]
+  }
+  else {
+    for (j in 1:5){
+      p10[j,i]<-p_live_cvd[i]
+    }
+    for (j in 6:10){
+      p10[j,i]<-p_live_cvd[i+1]
+    }
+  }
+}
+# print(xtable(data.frame(p10[,1:7]),digits=c(0,6,6,6,6,6,6,6),
+#       caption = "Probability of first time CVD (male)"),
+#       caption.placement="top",comment=FALSE)
+# print(xtable(data.frame(p10[,8:14]),digits=c(0,6,6,6,6,6,6,6),
+#       caption = "Probability of first time CVD (female)"),
+#       caption.placement="top",comment=FALSE)
+
+```
+
+
 ```{r results="asis"}
 prob_group0 <- matrix(0, ncol=14, nrow=10,
-                     dimnames=list(paste0("t",0:9),patient_group_name))
+                     dimnames=list(paste0("t",0:9),names_population))
+patient_group <- matrix(noStrategy_data$num, ncol=1,
+                        dimnames=list(names_population))
+result_newCVD <- matrix(0,ncol = 1, nrow = 14,
+                     dimnames=list(names_population,""))
+result_liveCVD <- matrix(0,ncol = 1, nrow = 14,
+                     dimnames=list(names_population,""))
+reult_qaly <- matrix(0,ncol = 1, nrow = 14,
+                     dimnames=list(names_population,""))
+result_lifeyear <- matrix(0,ncol = 1, nrow = 14,
+                     dimnames=list(names_population,""))
 for (i in 1:14){
-  prob_group0[,i] <- result_m_M[, 1, i]* p_live_cvd[i]
+  # prob_group0[,i] <- result_m_M[, 1, i]* p_live_cvd[i]
+  prob_group0[,i] <- result_m_M[, 1, i]* p10[,i]  # TODO
+  # n_cnew[j+1,1,i]<-m_M[j,1,i] * p10[j,i]   ## new occurence = S1*p9
+  result_newCVD[i] <- sum(prob_group0[,i]*patient_group[i]) # n_cnew
+  
+  # n_clive
+  n_clive[j+1,1,i] <- sum(prob_group0[,i] * p)
+  m_M[j,1,i]*a_P["s1","s2",j,i] +m_M[j,2,i]*p9[j,i]
+    
+  # qaly_m
+  qaly_m[j+1,,i] <- m_M[j+1,,i] * uti + n_clive[j+1,1,i]*uti2
+  # lifeyear_m
+  lifeyear_m [j+1,,i] <- m_M[j+1,,i]*year
 }
-patient_group <- matrix(noStrategy_data$num,ncol=1,dimnames=list(patient_group_name))
-result_CVD <- matrix(0,ncol = 1, nrow = 14,
-                     dimnames=list(patient_group_name,""))
-for(i in 1:14){
-  result_CVD[i] <- sum(prob_group0[,i]*patient_group[i])
-} 
-result_CVD_stg0 <- sum(result_CVD)
-print(xtable(data.frame(rbind(result_CVD,"sum" = result_CVD_stg0)),
-      caption = "CVD events for patients under Strategy0"),
-      caption.placement="top",comment=FALSE)
+
+result_newCVD_stg0 <- sum(result_newCVD)
+# print(xtable(data.frame(rbind(result_newCVD,"sum" = result_newCVD_stg0)),
+#       caption = "CVD events for patients under Strategy0"),
+#       caption.placement="top",comment=FALSE)
 
 ```
 
@@ -280,12 +318,12 @@ p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
 
 ```{r}
 risk_levels <- c("low","medium","high")
-result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
-                         dimnames = list(patient_group_name, risk_levels))
+result_newCVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(names_population, risk_levels))
 p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
-                         dimnames = list(patient_group_name,risk_levels))
+                         dimnames = list(names_population,risk_levels))
 p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
-                           dimnames = list(patient_group_name,risk_levels))
+                           dimnames = list(names_population,risk_levels))
 for(r in 1:3){  # three rish groups
   for(i in 1:14){
   if(i != 7 && i != 14){
@@ -357,37 +395,35 @@ for(r in 1:3){  # three rish groups
     result_m_M[,,i] <- m_M
   }
 }
-
+  
 prob_group1 <- matrix(0, ncol=14, nrow=10,
-                     dimnames=list(paste0("t",0:9),patient_group_name))
+                     dimnames=list(paste0("t",0:9),names_population))
 for (i in 1:14){
   prob_group1[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
 }
 patient_group <- matrix(cbind(population_data[1:14,]$low,
                               population_data[1:14,]$medium,
                               population_data[1:14,]$high),
-       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
+       ncol = 3, nrow=14,dimnames = list(names_population,risk_levels))
 for(j in 1:14){
-  result_CVD_lmh[j,r] <- sum(prob_group1[,j]*patient_group[j,r]) 
+  result_newCVD_lmh[j,r] <- sum(prob_group1[,j]*patient_group[j,r]) 
 } 
 }
 ```
 
 
 ```{r results="asis"}
-print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+print(xtable((rbind(result_newCVD_lmh, "sum" = colSums(result_newCVD_lmh))),
       caption = "CVD events for patients under Strategy1"),
       caption.placement="top",comment=FALSE)
-result_CVD_stg1 <- sum(result_CVD_lmh)
-result_CVD_stg1
+result_newCVD_stg1 <- sum(result_newCVD_lmh)
+result_newCVD_stg1
 ```
 
 
 
 
 # Strategy 2
-
-
 ```{r}
 p_live_cvd_l <- ProbFactor(p_live_cvd,HR_l_stg2)
 p_live_cvd_m <- ProbFactor(p_live_cvd,HR_m_stg2*
@@ -407,12 +443,12 @@ p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
 
 ```{r}
 risk_levels <- c("low","medium","high")
-result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
-                         dimnames = list(patient_group_name, risk_levels))
+result_newCVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(names_population, risk_levels))
 p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
-                         dimnames = list(patient_group_name,risk_levels))
+                         dimnames = list(names_population,risk_levels))
 p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
-                           dimnames = list(patient_group_name,risk_levels))
+                           dimnames = list(names_population,risk_levels))
 for(r in 1:3){  # three rish groups
   for(i in 1:14){
   if(i != 7 && i != 14){
@@ -486,28 +522,28 @@ for(r in 1:3){  # three rish groups
 }
 
 prob_group2 <- matrix(0, ncol=14, nrow=10,
-                     dimnames=list(paste0("t",0:9),patient_group_name))
+                     dimnames=list(paste0("t",0:9),names_population))
 for (i in 1:14){
   prob_group2[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
 }
 patient_group <- matrix(cbind(population_data[15:28,]$low,
                               population_data[15:28,]$medium,
                               population_data[15:28,]$high),
-       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
-result_CVD <- matrix(NA)
+       ncol = 3, nrow=14,dimnames = list(names_population,risk_levels))
+result_newCVD <- matrix(NA)
 for(j in 1:14){
-  result_CVD_lmh[j,r] <- sum(prob_group2[,j]*patient_group[j,r])
+  result_newCVD_lmh[j,r] <- sum(prob_group2[,j]*patient_group[j,r])
 } 
 }
 ```
 
 
 ```{r results="asis"}
-print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+print(xtable((rbind(result_newCVD_lmh, "sum" = colSums(result_newCVD_lmh))),
       caption = "CVD events for patients under Strategy2"),
       caption.placement="top",comment=FALSE)
-result_CVD_stg2 <- sum(result_CVD_lmh)
-result_CVD_stg2
+result_newCVD_stg2 <- sum(result_newCVD_lmh)
+result_newCVD_stg2
 ```
 
 # Strategy 3
@@ -532,12 +568,12 @@ p_live_cvdth_h <- ProbFactor(p_live_cvdth,1.7*
 
 ```{r}
 risk_levels <- c("low","medium","high")
-result_CVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
-                         dimnames = list(patient_group_name, risk_levels))
+result_newCVD_lmh <- matrix(0,  nrow = 14,ncol = 3,
+                         dimnames = list(names_population, risk_levels))
 p_live_cvd_lmh <- matrix(cbind(p_live_cvd_l,p_live_cvd_m,p_live_cvd_h), ncol=3,
-                         dimnames = list(patient_group_name,risk_levels))
+                         dimnames = list(names_population,risk_levels))
 p_live_cvdth_lmh <- matrix(cbind(p_live_cvdth_l,p_live_cvdth_m,p_live_cvdth_h), ncol=3,
-                           dimnames = list(patient_group_name,risk_levels))
+                           dimnames = list(names_population,risk_levels))
 for(r in 1:3){  # three rish groups
   for(i in 1:14){
   if(i != 7 && i != 14){
@@ -611,7 +647,7 @@ for(r in 1:3){  # three rish groups
 }
 
 prob_group3 <- matrix(0, ncol=14, nrow=10,
-                     dimnames=list(paste0("t",0:9),patient_group_name))
+                     dimnames=list(paste0("t",0:9),names_population))
 for (i in 1:14){
   prob_group3[,i] <- result_m_M[, 1, i]* p_live_cvd_lmh[i,r]
 }
@@ -619,27 +655,27 @@ for (i in 1:14){
 patient_group <- matrix(cbind(population_data[29:42,]$low,
                               population_data[29:42,]$medium,
                               population_data[29:42,]$high),
-       ncol = 3, nrow=14,dimnames = list(patient_group_name,risk_levels))
-result_CVD <- matrix(NA)
+       ncol = 3, nrow=14,dimnames = list(names_population,risk_levels))
+result_newCVD <- matrix(NA)
 for(j in 1:14){
-  result_CVD_lmh[j,r] <- sum(prob_group3[,j]*patient_group[j,r])
+  result_newCVD_lmh[j,r] <- sum(prob_group3[,j]*patient_group[j,r])
 } 
 }
 ```
 
 ```{r, results="asis"}
-print(xtable((rbind(result_CVD_lmh, "sum" = colSums(result_CVD_lmh))),
+print(xtable((rbind(result_newCVD_lmh, "sum" = colSums(result_newCVD_lmh))),
       caption = "CVD events for patients under Strategy3"),
       caption.placement="top",comment=FALSE)
-result_CVD_stg3 <- sum(result_CVD_lmh)
-result_CVD_stg3
+result_newCVD_stg3 <- sum(result_newCVD_lmh)
+result_newCVD_stg3
 ```
 
 # Conclusion
 
 ```{r results="asis"}
-print(xtable((matrix(cbind(result_CVD_stg0,result_CVD_stg1,
-      result_CVD_stg2,result_CVD_stg3),nrow = 1, ncol = 4,
+print(xtable((matrix(cbind(result_newCVD_stg0,result_newCVD_stg1,
+      result_newCVD_stg2,result_newCVD_stg3),nrow = 1, ncol = 4,
       dimnames = list("",v_names_str))),
       caption = "CVD events for patients under 3 strategies"),
       caption.placement="top",comment=FALSE)
